Prevent highlighter from erasing selected text

Summary:
https://phabricator.kde.org/D14447 introduced a regression on Lokalize, the slotRehighlight method is called when text is selected and the insertText(QString()) call inside that method removes all text selected in the cursor.

Clearing the selection before doing that call solves this issue.

BUG: 398661

Reviewers: #framework_syntax_highlighting, mlaurent, dfaure

Reviewed By: dfaure

Subscribers: kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D15686